--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,7 @@ jobs:
       - name: Package Helm Charts
         shell: bash
         run: |
+          pwd
           find charts -type f -name 'Chart.yaml' | sed -r 's|/[^/]+$||' | sort | uniq | xargs -L 1 helm dep up
           for d in src/charts/*/ ; do
               echo "$d"
