--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,7 +33,7 @@ jobs:
         run: |
           pwd
           find charts -type f -name 'Chart.yaml' | sed -r 's|/[^/]+$||' | sort | uniq | xargs -L 1 helm dep up
-          for d in src/charts/*/ ; do
+          for d in charts/*/ ; do
               echo "$d"
               helm package "$d" -u -d dest
           done
