--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,9 +31,9 @@ jobs:
       - name: Package Helm Charts
         shell: bash
         run: |
-          pwd
-          find charts -type f -name 'Chart.yaml' | sed -r 's|/[^/]+$||' | sort | uniq | xargs -L 1 helm dep up
-          for d in charts/*/ ; do
+          ls -lash
+          find src/charts -type f -name 'Chart.yaml' | sed -r 's|/[^/]+$||' | sort | uniq | xargs -L 1 helm dep up
+          for d in src/charts/*/ ; do
               echo "$d"
               helm package "$d" -u -d dest
           done
