testing smaller chart

--- a/charts/deploy-tracker/values.yaml
+++ b/charts/deploy-tracker/values.yaml
@@ -1,7 +1,7 @@
 env: local
 namespace: argocd
 
-image:
+deployTrackerImage:
   account: "878256633362"
   repoName: "deploy-tracker"
   repoRegion: us-west-2
