--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Install Helm
         uses: azure/setup-helm@v3
+        with:
           version: '3.9.2'
 
       - name: Package Helm Charts
