create values file for gha-runner-deployment

--- a/charts/gha-runner-deployment/templates/runner-deployment.yaml
+++ b/charts/gha-runner-deployment/templates/runner-deployment.yaml
@@ -1,25 +1,16 @@
-{{ if .Values.enabled }}
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
-  name: gha-runner-{{ .Values.serviceSuffix }}
-  namespace: {{ .Values.namespace }}
+  name: {{ include "gha-runner-deployment.fullname" . }}
+  namespace: {{ include "gha-runner-deployment.namespace" . }}
   labels:
     {{- include "gha-runner-deployment.labels" . | nindent 4}}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   template:
+    metadata:
+      {{- .Values.runnerDeployment.metadata | toYaml | nindent 6 }}
+    {{- with .Values.runnerDeployment.spec }}
     spec:
-      containerMode: kubernetes
-      dockerdWithinRunnerContainer: false
-      dockerEnabled: false
-      repository: {{ .Values.runnerDeploymentSpec.githubRepository }}
-      serviceAccountName: {{ .Values.runnerDeploymentSpec.serviceAccountName }}
-      workVolumeClaimTemplate:
-        storageClassName: gp3
-        accessModes:
-          - ReadWriteOnce
-        resources:
-          requests:
-            storage: 15Gi
-{{- end }}
+        {{- toYaml . | nindent 6 }}
+    {{- end }}
