--- a/charts/gha-runner-deployment/Chart.yaml
+++ b/charts/gha-runner-deployment/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: gha-runner-deployment
 description: A Helm chart for Github Action Runner Deployments
-type: library
+type: application
 version: 0.1.0
 appVersion: "0.1.0"
 keywords:
