--- a/charts/gha-runner-deployment/values.yaml
+++ b/charts/gha-runner-deployment/values.yaml
@@ -1,4 +1,4 @@
-# Default values for lll.
+# Default values for gha-runner-deployment.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
