--- a/charts/gha-runner-deployment/templates/role.yaml
+++ b/charts/gha-runner-deployment/templates/role.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -19,3 +20,4 @@ rules:
   - apiGroups: [""]
     resources: ["secrets"]
     verbs: ["get", "list", "create", "delete"]
+{{- end }}
