--- a/charts/gha-runner-deployment/templates/rolebinding.yaml
+++ b/charts/gha-runner-deployment/templates/rolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -11,3 +12,4 @@ subjects:
   - kind: ServiceAccount
     name: {{ .Values.serviceAccount.name }}
     namespace: {{include "gha-runner-deployment.namespace" .}}
+{{- end }}
