--- a/charts/gha-runner-deployment/templates/runner-deployment.yaml
+++ b/charts/gha-runner-deployment/templates/runner-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
@@ -16,3 +17,4 @@ spec:
     spec:
         {{- toYaml . | nindent 6 }}
     {{- end }}
+{{- end }}
