--- a/charts/gha-runner-deployment/templates/serviceaccount.yaml
+++ b/charts/gha-runner-deployment/templates/serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.serviceAccount.create }}
+{{- if and .Values.serviceAccount.create .Values.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
