--- a/charts/gha-runner-deployment/values.yaml
+++ b/charts/gha-runner-deployment/values.yaml
@@ -1,6 +1,7 @@
 # Default values for gha-runner-deployment.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+enabled: true
 
 replicaCount: 1
 
