--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Package Helm Charts
         shell: bash
         run: |
-          find src/charts -type f -name 'Chart.yaml' | sed -r 's|/[^/]+$||' | sort | uniq | xargs -L 1 helm dep up
+          find src/charts -type f -name 'Chart.yaml' -printf '%h\n' | sort -u | xargs -L 1 helm dep up
           for d in src/charts/*/ ; do
               echo "$d"
               helm package "$d" -u -d dest
