--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,12 +17,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: 'src'
           fetch-depth: 0
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: 'dest'
           ref: 'gh-pages'
@@ -36,8 +36,7 @@ jobs:
       - name: Package Helm Charts
         shell: bash
         run: |
-          ls -lash
-          find src/charts -type f -name 'Chart.yaml' | sed -r 's|/[^/]+$||' | sort | uniq | xargs -L 1 helm dep up
+          find src/charts -type f -name 'Chart.yaml' -printf '%h\n' | sort -u | xargs -L 1 helm dep up
           for d in src/charts/*/ ; do
               echo "$d"
               helm package "$d" -u -d dest
@@ -53,4 +52,3 @@ jobs:
           git add index.yaml
           git commit -m "Updated from ref: $GITHUB_SHA"
           git push
-
