create role and rolebinding to attach to the application service account name

--- a/charts/gha-runner-deployment/templates/role.yaml
+++ b/charts/gha-runner-deployment/templates/role.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.enabled }}
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -20,4 +21,14 @@ rules:
   - apiGroups: [""]
     resources: ["secrets"]
     verbs: ["get", "list", "create", "delete"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: check-version
+  namespace: {{include "gha-runner-deployment.namespace" .}}
+rules:
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["get", "watch", "list"]
 {{- end }}
