--- a/charts/gha-runner-deployment/templates/rolebinding.yaml
+++ b/charts/gha-runner-deployment/templates/rolebinding.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.enabled }}
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -11,5 +12,19 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ .Values.serviceAccount.name }}
+    namespace: {{include "gha-runner-deployment.namespace" .}}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: check-version
+  namespace: {{include "gha-runner-deployment.namespace" .}}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: check-version
+subjects:
+  - kind: ServiceAccount
+    name: {{ .Values.applicationServiceAccount.name }}
     namespace: {{include "gha-runner-deployment.namespace" .}}
 {{- end }}
