--- a/charts/gha-runner-deployment/values.yaml
+++ b/charts/gha-runner-deployment/values.yaml
@@ -24,6 +24,9 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: "default-gha-runner-deployment"
 
+applicationServiceAccount:
+  name: "default"
+
 podAnnotations: {}
 
 podSecurityContext: {}
