create values for external secret

--- a/charts/gha-runner-scale-set/templates/externalsecret.yaml
+++ b/charts/gha-runner-scale-set/templates/externalsecret.yaml
@@ -8,27 +8,27 @@ metadata:
 spec:
   refreshInterval: 1h
   secretStoreRef:
-    name: aws-secrets-manager
-    kind: ClusterSecretStore
+    name: {{ .Values.externalSecret.storeName }}
+    kind: {{ .Values.externalSecret.storeKind }}
   target:
     name: gha-runners
     creationPolicy: Owner
   data:
     - secretKey: github_app_id
       remoteRef:
-        key: "{{ .Values.secretKey }}"
+        key: "{{ .Values.externalSecret.key }}"
         property: github_app_id
         conversionStrategy: Default
         decodingStrategy: None
     - secretKey: github_app_installation_id
       remoteRef:
-        key: "{{ .Values.secretKey }}"
+        key: "{{ .Values.externalSecret.key }}"
         property: github_app_installation_id
         conversionStrategy: Default
         decodingStrategy: None
     - secretKey: github_app_private_key
       remoteRef:
-        key: "{{ .Values.secretKey }}"
+        key: "{{ .Values.externalSecret.key }}"
         property: github_app_private_key
         conversionStrategy: Default
         decodingStrategy: Base64
