--- a/charts/gha-runner-scale-set-resources/Chart.yaml
+++ b/charts/gha-runner-scale-set-resources/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: gha-runner-scale-set
+name: gha-runner-scale-set-resources
 description: A Helm chart for extra Github Actions Runner Scale Set resources
 type: application
 version: 0.1.0
