--- a/charts/gha-runner-scale-set-resources/templates/externalsecret.yaml
+++ b/charts/gha-runner-scale-set-resources/templates/externalsecret.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: gha-runners
+  name: {{ include "gha-runner-scale-set.fullname" . }}
   namespace: {{ include "gha-runner-scale-set.namespace" . }}
   labels:
     {{- include "gha-runner-scale-set.labels" . | nindent 4 }}
@@ -11,7 +11,7 @@ spec:
     name: {{ .Values.externalSecret.storeName }}
     kind: {{ .Values.externalSecret.storeKind }}
   target:
-    name: gha-runners
+    name: {{ include "gha-runner-scale-set.fullname" . }}
     creationPolicy: Owner
   data:
     - secretKey: github_app_id
