--- a/charts/gha-runner-scale-set-resources/values.yaml
+++ b/charts/gha-runner-scale-set-resources/values.yaml
@@ -18,7 +18,7 @@ serviceAccount:
   create: true
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: "default-gha-runner-scale-set"
+  name: "gha-runner-scale-set"
 
 applicationServiceAccount:
   name: "default"
