set secret target

--- a/charts/gha-runner-scale-set-resources/templates/externalsecret.yaml
+++ b/charts/gha-runner-scale-set-resources/templates/externalsecret.yaml
@@ -11,7 +11,7 @@ spec:
     name: {{ .Values.externalSecret.storeName }}
     kind: {{ .Values.externalSecret.storeKind }}
   target:
-    name: {{ include "gha-runner-scale-set.fullname" . }}
+    name: {{ .Values.externalSecret.targetSecret }}
     creationPolicy: Owner
   data:
     - secretKey: github_app_id
