--- a/charts/gha-runner-scale-set-resources/values.yaml
+++ b/charts/gha-runner-scale-set-resources/values.yaml
@@ -12,6 +12,7 @@ checkVersion:
 
 nameOverride: ""
 fullnameOverride: ""
+namespaceOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -24,10 +25,12 @@ applicationServiceAccount:
   name: "default"
 
 # The external secret to grab GitHub secrets from
+# targetSecret should match what's set on the official GHA Runner Scale Set chart's githubConfigSecret value
 externalSecret:
   storeName: "external-secret-store"
   storeKind: "ClusterSecretStore"
   key: "key"
+  targetSecret: "gha-runners"
 
 # set to true if you're not already setting PERMISSIVE mtls policy for Istio in the application namespace
 setIstioPeerAuthentication: false
