--- a/charts/gha-runner-scale-set-resources/values.yaml
+++ b/charts/gha-runner-scale-set-resources/values.yaml
@@ -9,6 +9,9 @@ checkVersion:
     repository: busybox
     pullPolicy: IfNotPresent
     tag: ""
+# these values are passed to the init container
+  service: ""
+  version: ""
 
 nameOverride: ""
 fullnameOverride: ""
