SRE-2455 / Updating default to import all permitted secrets with additional overrides

--- a/charts/secretstores/templates/externalsecret.yaml
+++ b/charts/secretstores/templates/externalsecret.yaml
@@ -1,21 +1,54 @@
 {{- range $key, $value := $.Values.stores}}
-{{- range $index, $secret := $value.secrets}}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: {{$secret.destName}}
+  name: "secrets-{{$key}}"
+  labels:
+    {{- include "secretstores.labels" $ | nindent 4 }}
 spec:
-  refreshInterval: {{$secret.refreshInterval | default "1h"}}
+  refreshInterval: {{$value.refreshInterval | default "1h" | quote}}
   secretStoreRef:
-    name: {{$key}}
-    kind: SecretStore
+    name: {{$key | quote}}
+    kind: "SecretStore"
   target:
-    name: {{$secret.destName}}
+    name: "secrets-{{$key}}"
+  {{- if $value.secrets}}
   data:
+    {{- range $index, $secret := $value.secrets}}
     - remoteRef:
-        key: {{$secret.sourcePath}}
-        property: {{$secret.sourceKey}}
-      secretKey: {{$secret.destKey}}
+        key: {{$secret.sourcePath | quote}}
+        property: {{$secret.sourceKey | quote}}
+      secretKey: {{$secret.destKey | quote}}
+    {{- end}}
+  {{- else}}
+  dataFrom:
+    {{- if eq $value.type "aws"}}
+    - find:
+        path: "{{$.Values.global.env}}/{{$.Values.serviceName}}"
+        name:
+          regexp: ".*"
+    - find:
+        path: "{{$.Values.global.env}}/shared"
+        name:
+          regexp: ".*"
+    - find:
+        path: "shared"
+        name:
+          regexp: ".*"
+    {{- else}}
+    - find:
+        path: "{{$.Values.serviceName}}"
+        name:
+          regexp: ".*"
+    {{- end}}
+    {{- with $value.additionalSecretsPaths}}
+    {{- range .}}
+    - find:
+        path: {{. | quote}}
+        name:
+          regexp: ".*"
+    {{- end}}
+    {{- end}}
+  {{- end}}
 ---
-{{- end}}
 {{- end}}
