--- a/charts/secretstores/values.yaml
+++ b/charts/secretstores/values.yaml
@@ -3,17 +3,15 @@ serviceName: {}
 
 stores: {}
 # stores contains a dictionary of store objects, which can include secrets
+# For more information, see README.md
 # Example:
 # aws:
 #   type: "aws"
 #   iamRole: "arn:aws:iam::XXXXXXXXXXXX:role/my-service-role"
+#   refreshInterval: "2h"
 #   region: "us-west-2"
-#   secrets:
-#     - sourcePath: "test/my-service/test-secret"
-#       sourceKey: "nunya"
-#       destName: "test-secret-aws"
-#       destKey: "nun-ya"
-#       refreshInterval: "2h"
+#   additionalSecretsPaths:
+#     - "test/sibling-service/another-secret"
 # vault-service:
 #   type: "vault"
 #   server: "http://cool.vault.path:port"
