--- a/charts/secretstores/templates/externalsecret.yaml
+++ b/charts/secretstores/templates/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
     - remoteRef:
         key: {{$secret.sourcePath | quote}}
         property: {{$secret.sourceKey | quote}}
-      secretKey: {{$secret.destKey | quote}}
+      secretKey: {{$secret.destKey | default $secret.sourceKey | quote}}
     {{- end}}
   {{- else}}
   dataFrom:
