SRE-2455 / Better inheritance of global name and namespace values

--- a/charts/secretstores/templates/externalsecret.yaml
+++ b/charts/secretstores/templates/externalsecret.yaml
@@ -24,7 +24,7 @@ spec:
   dataFrom:
     {{- if eq $value.type "aws"}}
     - find:
-        path: "{{$.Values.global.env}}/{{$.Values.serviceName}}"
+        path: "{{$.Values.global.env}}/{{include "secretstores.fullname" $}}"
         name:
           regexp: ".*"
     - find:
@@ -37,7 +37,7 @@ spec:
           regexp: ".*"
     {{- else}}
     - find:
-        path: "{{$.Values.serviceName}}"
+        path: {{include "secretstores.fullname" $ | quote }}
         name:
           regexp: ".*"
     {{- end}}
