--- a/charts/secretstores/templates/secretstore.yaml
+++ b/charts/secretstores/templates/secretstore.yaml
@@ -3,7 +3,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
   name: {{$key | quote}}
-  namespace: {{$.Values.namespace | quote}}
+  namespace: {{include "secretstores.namespace" $ | quote}}
   labels:
     {{- include "secretstores.labels" $ | nindent 4 }}
   {{- with $.Values.annotations}}
@@ -35,9 +35,9 @@ spec:
         # Kubernetes auth: https://www.vaultproject.io/docs/auth/kubernetes
         kubernetes:
           mountPath: "kubernetes"
-          role: {{$.Values.serviceName | quote}}
+          role: {{include "secretstores.fullname" $ | quote}}
           serviceAccountRef:
-            name: {{$.Values.serviceName | quote}}
+            name: {{include "secretstores.fullname" $ | quote}}
     {{- end }}
 ---
 {{- end }}
