SRE-2455 / Using rewrite to remove env from secrets path

--- a/charts/secretstores/templates/externalsecret.yaml
+++ b/charts/secretstores/templates/externalsecret.yaml
@@ -27,10 +27,18 @@ spec:
         path: "{{$.Values.global.env}}/{{include "secretstores.fullname" $}}"
         name:
           regexp: ".*"
+      rewrite:
+        - regexp:
+          source: "{{$.Values.global.env}}/(.*)"
+          target: "$1"
     - find:
         path: "{{$.Values.global.env}}/shared"
         name:
           regexp: ".*"
+      rewrite:
+        - regexp:
+          source: "{{$.Values.global.env}}/(.*)"
+          target: "$1"
     - find:
         path: "shared"
         name:
