SRE-2455 / Replacing bad chars and fixing indents

--- a/charts/secretstores/templates/externalsecret.yaml
+++ b/charts/secretstores/templates/externalsecret.yaml
@@ -29,16 +29,22 @@ spec:
           regexp: ".*"
       rewrite:
         - regexp:
-          source: "{{$.Values.global.env}}/(.*)"
-          target: "$1"
+            source: "{{$.Values.global.env}}/(.*)"
+            target: "$1"
+        - regexp:
+            source: "/"
+            target: "_"
     - find:
         path: "{{$.Values.global.env}}/shared"
         name:
           regexp: ".*"
       rewrite:
         - regexp:
-          source: "{{$.Values.global.env}}/(.*)"
-          target: "$1"
+            source: "{{$.Values.global.env}}/(.*)"
+            target: "$1"
+        - regexp:
+            source: "/"
+            target: "_"
     - find:
         path: "shared"
         name:
